action part added

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <section class="discount-section">
             <div class="discount-section-container">
                 <div class="discount-card">
-                    <h2 class="discount-title">Want to get discount?</h2>
-                    <p class="discount-description">Upto 50% discount is available. Click the button below to see discounted products</p>
-                    <input type="text" class="show-discounted-products-button">
-
+                    <h2 class="discount-title raleway-text">Want to get discount?</h2>
+                    <p class="discount-description raleway-text">Upto 50% discount is available. Click the button below to see discounted products</p>
+                    <input type="button" class="show-discounted-products-button primary-button" value="Click here">
                 </div>
-
+                
+                <img src="images/discount.jpg" alt="">
             </div>
 
         </section>
