Message us section added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/7ff30387aa.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -109,7 +109,34 @@
                 </div>
             </div>
         </section>
+        <section class="message-us-section">
+            <div class="message-us-container">
+                <div class="message-us-contents">
+                    <h1>Let's Get in <br> Touch</h1>
+                    <form class="raleway-font">
+                        <label for="email-input"><b>Email</b></label>
+                        <br>
+                        <input id="email-input" name="email" type="email" placeholder="example@gmail.com">
 
+                        <br>
+
+                        <label for="name-input"><b>Name</b></label>
+                        <br>
+                        <input id = "name-input"  name="name" type="text" placeholder="full name">
+
+                         <br>
+                        
+                        <label for="message-input"><b>Message</b></label>
+                        <br>
+                        <input id="message-input" name="message" type="text" 
+                        placeholder="write your message...">
+                        <br>
+                          <input class="primary-button raleway-font" type="button" value="Get in Touch">
+                    </form>
+                </div>
+            </div>
+
+        </section>
 
        
     </main>
