textarea issue solved, mouse hover effect added

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <div class="message-us-container">
                 <div class="message-us-contents">
                     <h1 >Let's Get in <br> Touch</h1>
-                    <form class="raleway-font">
+                    <form class="inter-font">
                         <label for="email-input"><b>Email</b></label>
                         <br>
                         <input id="email-input" name="email" type="email" placeholder="example@gmail.com">
@@ -147,7 +147,7 @@
                         
                         <label for="message-input"><b>Message</b></label>
                         <br>
-                        <textarea id="message-input" class="textarea-msg" name="message" placeholder="write your message..."></textarea>
+                        <textarea cols="65" id="message-input" class="textarea-msg inter-font" name="message" placeholder="write your message..."></textarea>
 
                         <input class="primary-button" type="button" value="Get in Touch">
                     </form>
